2008-06-16  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/boost.h: Add extract_swig_wrapped_ptr to convert
	SWIG object (from openbabel) to be converted to boost::python/C++
	objects. Still very limited, but you can now do:
	>>> atom = obcore.OBAtom()
	>>> atom.SetAtomicNum(6)
	>>> Avogadro.molecule.AddAtom(atom)

2008-06-13  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/CMakeLists.txt,
	libavogadro/src/extensions/gaussianextension.*,
	libavogadro/src/extensions/qcheminputdialog.*: Added a new QChem input
	deck generator. The input file generated is still not correct but
	VLANs and the fact that it compiles mean it is better to add it now.

2008-06-12  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* avogadro/src/mainwindow.cpp: When opening a 2D file, ask to do a
	quick conversion to 3D. (scale bonds, wedge -> Z+1, hash -> Z-1, 
	UFF 100 steps, should we add hydrogens?)

2008-06-11  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/tools/aligntool.cpp,
	libavogadro/src/tools/clickmeasuretool.cpp: Fixed initialisation of
	the QVarLengthArray.

2008-06-09  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/gaussianinputdialog.*: Added a compact
	form of the z-matrix as an option.

2008-06-08  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/glwidget.*: Functions for named selections.

	* libavogadro/src/extensions/selectextension.*,
	libavogadro/src/extension/namedselectionmodel.*: Use them. At the
	moment the model is a simple list. I needed this functionality for
	specifying interaction groups in the force field setup dialog. This
	would be expanded in the future (tree view).

	* libavogadro/src/boost.h: adjust OBMol::AddHydrogens() for added pH
	paramter.

	* libavogadro/src/glwidget.*: Add resized() signal.

	* libavogadro/src/extensions/overlayextension.*: 2D overlay extension
	for displaying ESP gradient, 2D representations, ???
